Closed Bug 1616457 Opened 4 years ago Closed 4 years ago

Failures in 1.0.4 conformance/extensions/webgl-draw-buffers.html?webglVersion=1

Categories

(Core :: Graphics: CanvasWebGL, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla75
Tracking Status
firefox75 --- fixed

People

(Reporter: jgilbert, Assigned: jgilbert)

Details

Attachments

(1 file)

We must not check frag output type agreement if colorMask(0,0,0,0).
We must allow drawing with no frag outputs, leaving color values unchanged. (evidently this is used enough that we spec'd it this way?)

We must not check frag output type agreement if colorMask(0,0,0,0).
We must allow drawing with no frag outputs, leaving color values
unchanged. (evidently this is used enough that we spec'd it this way?)

Pushed by jgilbert@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/ce56a868991c
Fix failures in conformance/extensions/webgl-draw-buffers. r=lsalzman
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla75
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: