Bug 1616457 - Fix failures in conformance/extensions/webgl-draw-buffers. r=lsalzman

We must not check frag output type agreement if colorMask(0,0,0,0).
We must allow drawing with no frag outputs, leaving color values
unchanged. (evidently this is used enough that we spec'd it this way?)

Differential Revision: https://phabricator.services.mozilla.com/D63287