dom/canvas/WebGLContextValidate.cpp
@@ -285,7 +285,6 @@ bool WebGLContext::InitAndValidateGL(FailureReason* const out_failReason) {
 
   // These are the default values, see 6.2 State tables in the
   // OpenGL ES 2.0.25 spec.
-  mColorWriteMask = 0x0f;
   mDriverColorMask = mColorWriteMask;
   mColorClearValue[0] = 0.f;
   mColorClearValue[1] = 0.f;
